# WeatherForecast

./: CMakeLists.txt  README.md  main.cpp
data/: config.txt  constants.h
